--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   dio: ^5.9.0
   built_value: ^8.12.0
   json_annotation: ^4.9.0
+  flutter_image_compress: ^2.1.0
 
 dev_dependencies:
   flutter_test:
